MAPD-1085: Fix issue with carousel not working on mobile; adjust mobile carousel control location; Use zoom cursor for property carousel and property cards

--- a/frontend/map/styles/views/project.styl
+++ b/frontend/map/styles/views/project.styl
@@ -24,6 +24,9 @@
   padding-left: 0;
   padding-right: 0;
 
+  .zoomable
+    cursor: zoom-in;
+
   .btn-dashboard
     font-size: 12px;
     padding: 3px;
@@ -251,7 +254,7 @@
   //
 
   .project-notes
-    margin-top: $project-gutter-width;
+    //margin-top: $project-gutter-width;
     font-size: 16px;
 
     .item
